--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wx808ee506f0b5c41d",
-	"projectname": "demo",
+	"projectname": "XCX",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
